--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 29
@@ -32,6 +32,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0-alpha3'
     implementation "androidx.core:core-ktx:+"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    // OpenSource Library - SearchView
+    implementation 'com.lapism:searchview:28.0.0'
+    implementation 'com.github.mancj:MaterialSearchBar:0.8.2'
 }
 repositories {
     mavenCentral()
