--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.FarmerLoginActivity"></activity>
+        <activity android:name=".Activities.FarmerMainActivity"></activity>
+        <activity android:name=".Activities.OtpVerificationActivity" />
+        <activity android:name=".Activities.FarmerLoginActivity" />
         <activity
             android:name=".Activities.SplashActivity"
             android:theme="@style/SplashTheme">
